--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,14 @@ h1{
     font-size: 52px;
 }
 
-.square-container{
+.container{
     height: 400px;
     width: 400px;
     border: 2px solid #ededed;
+}
+
+.box{
+    height: 16px;
+    width: 16px;
+    border: 1px solid #ededed;
 }
