--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 80vh;
 }
 
 h1{
@@ -21,13 +21,18 @@ h1{
 }
 
 .container{
+    display: flex;
+    flex-wrap: wrap;
     height: 400px;
     width: 400px;
-    border: 2px solid #ededed;
 }
 
-.box{
-    height: 16px;
-    width: 16px;
+.square{
+    height: 25px;
+    width: 25px;
     border: 1px solid #ededed;
+}
+
+.square:hover{
+    background-color: #ededed;
 }
